zmiany działania aktualności (pobieranie), automatyzacja aktualnosci oraz poprawki w dzialaniu admina, zmiany w dokumentacji API, animacje w planie lekcji
